lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:6: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	for (k<- 0 to l-2) {
              ^